@@ -7,8 +7,11 @@ apt (0.9.3) unstable; urgency=low
     - add a more versatile Dump() method
   * apt-pkg/acquire-worker.cc:
     - use Dump() to generate the configuration message for sending
+  * cmdline/apt-config.cc:
+    - make it possible to limit dump to a subtree
+    - implement --empty and --format option for dump
 
- -- David Kalnischkies <kalnischkies@gmail.com>  Sun, 22 Apr 2012 12:28:13 +0200
+ -- David Kalnischkies <kalnischkies@gmail.com>  Sun, 22 Apr 2012 12:29:07 +0200
 
 apt (0.9.2) unstable; urgency=low
 
